--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -1,1 +1,79 @@
-<p>basicos works!</p>
+<h2>Reactivos: Básicos</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <form (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
+      <!-- campo del Producto -->
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Producto</label>
+        <div class="col-sm-9">
+          <input
+            type="text"
+            formControlName="nombre"
+            class="form-control"
+            placeholder="Nombre del producto"
+          />
+          <span class="form-text text-danger" *ngIf="campoEsValido('nombre')"
+            >Debe de ser de 3 letras</span
+          >
+        </div>
+      </div>
+
+      <!-- campo del Precio -->
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Precio</label>
+        <div class="col-sm-9">
+          <input
+            type="number"
+            formControlName="precio"
+            class="form-control"
+            placeholder="Precio del producto"
+          />
+          <span class="form-text text-danger" *ngIf="campoEsValido('precio')"
+            >El precio debe de ser 0 o mayor</span
+          >
+        </div>
+      </div>
+
+      <!-- campo del Existencias -->
+      <div class="mb-3 row">
+        <label class="col-sm-3 col-form-label">Exisitencias</label>
+        <div class="col-sm-9">
+          <input
+            type="number"
+            formControlName="existencias"
+            class="form-control"
+            placeholder="Exisitencias del producto"
+          />
+          <span
+            class="form-text text-danger"
+            *ngIf="campoEsValido('existencias')"
+            >Las Existencias deben de ser 0 o mayor</span
+          >
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-primary float-end">
+            Guardar
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <span>Valid</span>
+    <pre>{{ miFormulario.valid | json }}</pre>
+    <span>Pristine</span>
+    <pre>{{ miFormulario.pristine | json }}</pre>
+    <span>Touched</span>
+    <pre>{{ miFormulario.touched | json }}</pre>
+    <span>Value</span>
+    <pre>{{ miFormulario.value | json }}</pre>
+  </div>
+</div>
