--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,58 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: <small>Dínamicos</small></h2>
+<hr />
+
+<form (ngSubmit)="guardar()" [formGroup]="miFormulario">
+  <!-- Nombre -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input
+        class="form-control"
+        placeholder="Nombre de la persona"
+        formControlName="nombre"
+      />
+      <span class="form-text text-danger" *ngIf="campoEsValido('nombre')"
+        >Este Campo es obligatorio</span
+      >
+    </div>
+  </div>
+
+  <!-- Agregar -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input class="form-control" placeholder="Agregar favorito" />
+        <button class="btn btn-outline-primary" type="submit">Agregar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Lista de juegos favoritos -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+      <!-- <div class="input-group mb-1"
+        *ngFor="let juego of persona.favoritos; let i = index"
+      >
+        <input class="form-control"/>
+        <button
+          class="btn btn-outline-danger"
+          type="button"
+        >
+          Eliminar
+        </button>
+      </div> -->
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="button" class="btn btn-primary float-end">Guardar</button>
+    </div>
+  </div>
+</form>
+
+<!-- <span>Persona</span>
+<pre>{{ persona | json }}</pre>
+ -->
