--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -22,8 +22,19 @@
     <label class="col-sm-3 col-form-label">Agregar</label>
     <div class="col-sm-9">
       <div class="input-group">
-        <input class="form-control" placeholder="Agregar favorito" />
-        <button class="btn btn-outline-primary" type="submit">Agregar</button>
+        <input
+          class="form-control"
+          [formControl]="nuevoFavorito"
+          placeholder="Agregar favorito"
+          (keyup.enter)="agregarFavorito()"
+        />
+        <button
+          class="btn btn-outline-primary"
+          type="submit"
+          (click)="agregarFavorito()"
+        >
+          Agregar
+        </button>
       </div>
     </div>
   </div>
@@ -31,18 +42,20 @@
   <!-- Lista de juegos favoritos -->
   <div class="mb-3 row">
     <label class="col-sm-3 col-form-label">Favoritos</label>
-    <div class="col-sm-9">
-      <!-- <div class="input-group mb-1"
-        *ngFor="let juego of persona.favoritos; let i = index"
+    <div class="col-sm-9" formArrayName="favoritos">
+      <div
+        class="input-group mb-1"
+        *ngFor="let favorito of favoritosArr.controls; let i = index"
       >
-        <input class="form-control"/>
+        <input class="form-control" [formControlName]="i" />
         <button
+          (click)="borrar(i)"
           class="btn btn-outline-danger"
           type="button"
         >
           Eliminar
         </button>
-      </div> -->
+      </div>
     </div>
   </div>
 
@@ -53,6 +66,16 @@
   </div>
 </form>
 
-<!-- <span>Persona</span>
-<pre>{{ persona | json }}</pre>
- -->
+<span>Valid</span>
+<pre>{{ miFormulario.valid }}</pre>
+<br />
+
+<span>Value</span>
+<pre>{{ miFormulario.value | json }}</pre>
+<br />
+
+<span>Agregar Juego</span>
+<pre>{{ nuevoFavorito.valid | json }}</pre>
+<br />
+
+<pre>{{ nuevoFavorito.value | json }}</pre>
