--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -30,9 +30,9 @@
             class="form-control"
             placeholder="Email del usuario"
           />
-          <span class="form-text text-danger" *ngIf="campN('email')"
-            >El correo es obligatorio</span
-          >
+          <span class="form-text text-danger" *ngIf="campN('nombre')">{{
+            EmailErrorMsg
+          }}</span>
         </div>
       </div>
 
@@ -86,7 +86,11 @@
 
       <div class="row">
         <div class="col">
-          <button (click)="submitF()" class="btn btn-primary float-end">
+          <button
+            (click)="submitF()"
+            class="btn btn-primary float-end"
+            [disabled]="form.pending"
+          >
             Crear
           </button>
         </div>
@@ -96,6 +100,8 @@
 </div>
 
 <h2>Form Valid: {{ form.valid }}</h2>
+<h2>Form Status: {{ form.status }}</h2>
+<h2>Form Pending: {{ form.pending }}</h2>
 
 <h2>Form Errors:</h2>
 <pre>{{ form.errors | json }}</pre>
